Update ACP - SVD - v0.4.ipynb

--- a/ACP - SVD - v0.4.ipynb
+++ b/ACP - SVD - v0.4.ipynb
@@ -129,7 +129,7 @@
     }
    ],
    "source": [
-    "data = open(\"/Users/ariane/Downloads/donnees_ACP.csv\", \"r\")\n",
+    "data = open(\"./donnees_ACP.csv\", \"r\")\n",
     "content = data.readlines(500)\n",
     "content"
    ]
