Update ACP - SVD - v0.4.ipynb

--- a/ACP - SVD - v0.4.ipynb
+++ b/ACP - SVD - v0.4.ipynb
@@ -286,7 +286,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"/Users/ariane/Downloads/donnees_ACP.csv\")\n",
+    "df = pd.read_csv(\"./donnees_ACP.csv\")\n",
     "df.head()"
    ]
   },
