Update L'ACP en python - version GitHub.ipynb

--- a/L'ACP en python - version GitHub.ipynb
+++ b/L'ACP en python - version GitHub.ipynb
@@ -399,7 +399,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"/Users/ariane/Downloads/confiance_acp.csv\")\n",
+    "df = pd.read_csv(\"./confiance_acp.csv\")\n",
     "df"
    ]
   },
