--- a/L'ACP en python - version GitHub.ipynb
+++ b/L'ACP en python - version GitHub.ipynb
@@ -20,22 +20,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<p style='text-align: justify;'>  \n",
+    "    Ce notebook est dédié à l'analyse en composantes principales (ACP ou PCA en anglais pour principal component analysis). Il doit permettre au lecteur de découvrir les avantages de Python pour la réalisation d'une ACP, de se familiariser avec la syntaxe de ce langage de programmation mais aussi de se pencher sur la théorie mathématique qui donne sens à l'ACP. En effet, il nous semble que pour analyser de la façon la plus juste qui soit les résultats d'une ACP, il est insuffisant de se former à la seule interprétation des données une fois traitées.   </p>\n",
     "\n",
     "\n",
-    "Ce notebook est dédié à l'analyse en composantes principales (ACP ou PCA en anglais pour principal component analysis). Il doit permettre au lecteur de découvrir les avantages de Python pour la réalisation d'une ACP, de se familiariser avec la syntaxe de ce langage de programmation mais aussi de se pencher sur la théorie mathématique qui donne sens à l'ACP. En effet, il nous semble que pour analyser de la façon la plus juste qui soit les résultats d'une ACP, il est insuffisant de se former à la seule interprétation des données une fois traitées.   \n",
-    "Faire l'effort de comprendre la théorie mathématique sur laquelle repose l'ACP peut permettre au chercheur en sciences sociales d'enrichir son interprétation et d'éviter des erreurs. Cependant, bien qu'il soit important que le praticien en sciences sociales ait une bonne maîtrise de son outil d'analyse, aborder la théorie mathématique de l'ACP sous un angle trop formel pourrait nous faire perdre de vue l'usage pratique de l'ACP en sciences sociales. \n",
-    "L'implémentation informatique des calculs mathématiques assure selon nous le lien entre théorie et pratique. Elle nous permet de ne pas céder à la tentation de faire une trop grande place à la théorie, et définit les limites de ce tutoriel, guidé par l’objectif pratique de coder un algorithme pour l’ACP. \n",
+    "<p style='text-align: justify;'>  Faire l'effort de comprendre la théorie mathématique sur laquelle repose l'ACP peut permettre au chercheur en sciences sociales d'enrichir son interprétation et d'éviter des erreurs. Cependant, bien qu'il soit important que le praticien en sciences sociales ait une bonne maîtrise de son outil d'analyse, aborder la théorie mathématique de l'ACP sous un angle trop formel pourrait nous faire perdre de vue l'usage pratique de l'ACP en sciences sociales. </p>\n",
+    "<p style='text-align: justify;'> L'implémentation informatique des calculs mathématiques assure selon nous le lien entre théorie et pratique. Elle nous permet de ne pas céder à la tentation de faire une trop grande place à la théorie, et définit les limites de ce tutoriel, guidé par l’objectif pratique de coder un algorithme pour l’ACP. </p>\n",
     "\n",
     "\n",
-    "Introduite par les travaux de Karl Pearson en 1901 et mise au point par Hotelling en 1933, cette méthode qui emprunte à la géométrie, à l'algèbre linéaire et à la statistique fait partie de la grande famille des analyses de données multivariées et plus précisément des analyses factorielles.    \n",
+    "<p style='text-align: justify;'>Introduite par les travaux de Karl Pearson en 1901 et mise au point par Hotelling en 1933, cette méthode qui emprunte à la géométrie, à l'algèbre linéaire et à la statistique fait partie de la grande famille des analyses de données multivariées et plus précisément des analyses factorielles.</p>    \n",
     "\n",
-    "Son principe est de traiter par le calcul un grand nombre de données quantitatives complexes et parfois redondantes afin de mettre en lumière la structuration de ces données. C'est donc un outil précieux aussi bien en sciences des données qu'en sciences humaines et sociales.   \n",
+    "<p style='text-align: justify;'>Son principe est de traiter par le calcul un grand nombre de données quantitatives complexes et parfois redondantes afin de mettre en lumière la structuration de ces données. C'est donc un outil précieux aussi bien en sciences des données qu'en sciences humaines et sociales.  </p> \n",
     "\n",
     "**Concrètement**, face à un tableau de données (ici quantitatives) avec un nombre de colonnes et un nombre de lignes importants (a minima supérieurs à trois), l’ACP permet de compresser et de synthétiser l’information pour dégager des tendances globales qui guideront le chercheur dans son analyse. Les outils graphiques permettent de visualiser les principaux points communs et différences des individus au sein d’une population, comment ces caractéristiques s’assemblent le plus souvent pour former des individus types, ou encore quels individus s’éloignent des schémas plus fréquents. Charge ensuite au chercheur de réfléchir aux pourquoi et aux comment, l’ACP étant uniquement un outil descriptif qui pourra s’ajouter mais jamais se substituer au travail d’analyse. \n",
     "\n",
     "\n",
-    "**Techniquement**, réaliser une ACP consiste à construire de nouvelles variables, appelées facteurs, à partir de la combinaison linéaire des variables initiales (en algèbre linéaire, on parle d’opération de changement de base). Suite à ces manipulations, les facteurs obtenus présentent le double intérêt d’être non-corrélés entre eux et de variance (c’est à dire de capacité à représenter les données) décroissantes : les premiers facteurs offrent ainsi la meilleure synthèse de l'information  contenue dans nos données. \n",
-    "Le choix d'un nombre limité de facteurs, dits principaux, permet ensuite de réduire le nombre de variables considérées tout en minimisant la perte d’information (on parle de réduction de dimensionalité). Cela nous permettra par exemple de visualiser la structure des données sur un plan 2D (alors que nos données initiales étaient représentées dans un tableau c’est-à-dire, traduit graphiquement, par un nuage de points dans un espace de dimension égale au nombre de variables considérées, souvent dans un espace à bien plus de trois dimensions !).\n",
+    "**Techniquement**, réaliser une ACP consiste à construire de nouvelles variables, appelées facteurs, à partir de la combinaison linéaire des variables initiales (en algèbre linéaire, on parle d’opération de changement de base). Suite à ces manipulations, les facteurs obtenus présentent le double intérêt d’être non-corrélés entre eux et de variance (c’est à dire de capacité à représenter les données) décroissantes : les premiers facteurs offrent ainsi la meilleure synthèse de l'information  contenue dans nos données.\n",
+    "\n",
+    "<p style='text-align: justify;'>Le choix d'un nombre limité de facteurs, dits principaux, permet ensuite de réduire le nombre de variables considérées tout en minimisant la perte d’information (on parle de réduction de dimensionalité). Cela nous permettra par exemple de visualiser la structure des données sur un plan 2D (alors que nos données initiales étaient représentées dans un tableau c’est-à-dire, traduit graphiquement, par un nuage de points dans un espace de dimension égale au nombre de variables considérées, souvent dans un espace à bien plus de trois dimensions !).</p>\n",
     "\n",
     "\n",
     "\n",
@@ -43,13 +45,15 @@
     "\n",
     "**Le point de départ de ce travail est un double constat :** \n",
     "\n",
-    "Il existe une vaste littérature sur le traitement informatisé des données quantitatives. Cependant, il nous a semblé que les travaux existants étaient d'une part majoritairement dédiés non pas à Python mais à R (logiciel libre dédié aux statistiques et qui possède son propre langage également appelé R) et que, d'autre part, ces travaux se présentaient davantage sous la forme de tutoriels pour la réalisation pratique de l'ACP, sans rappel sur la théorie sous-tendue par cette méthode.  \n",
+    "<p style='text-align: justify;'>Il existe une vaste littérature sur le traitement informatisé des données quantitatives. Cependant, il nous a semblé que les travaux existants étaient d'une part majoritairement dédiés non pas à Python mais à R (logiciel libre dédié aux statistiques et qui possède son propre langage également appelé R) et que, d'autre part, ces travaux se présentaient davantage sous la forme de tutoriels pour la réalisation pratique de l'ACP, sans rappel sur la théorie sous-tendue par cette méthode.  </p>\n",
     "\n",
     "L'objectif de ce notebook est donc triple : \n",
     "\n",
-    "   - rappeler à l'utilisateur praticien les fondements théoriques de l’ACP (pour qu'il puisse s'en servir efficacement et avec un minimum d’erreurs) tout en conservant une approche empirique, avec pour objectif de concilier la rigueur nécessaire à la compréhension de l'instrument d'analyse sans pour autant rebuter le lecteur par un trop grand formalisme. \n",
-    "   - écrire un algorithme d'ACP sur Python qui reprenne les résultats et les visualisations proposées par R ;\n",
-    "   - enrichir la gamme et les fonctionnalités de visualisations grâce à la richesse des bibliothèques Python et ainsi donner un premier aperçu de ce qu'un chercheur en sciences sociales pourrait gagner à se familiariser avec la programmation dans ce langage ;  \n"
+    "<p style='text-align: justify;'>   - rappeler à l'utilisateur praticien les fondements théoriques de l’ACP (pour qu'il puisse s'en servir efficacement et avec un minimum d’erreurs) tout en conservant une approche empirique, avec pour objectif de concilier la rigueur nécessaire à la compréhension de l'instrument d'analyse sans pour autant rebuter le lecteur par un trop grand formalisme. </p>\n",
+    "\n",
+    "<p style='text-align: justify;'>   - écrire un algorithme d'ACP sur Python qui reprenne les résultats et les visualisations proposées par R ;</p>\n",
+    "\n",
+    "<p style='text-align: justify;'>   - enrichir la gamme et les fonctionnalités de visualisations grâce à la richesse des bibliothèques Python et ainsi donner un premier aperçu de ce qu'un chercheur en sciences sociales pourrait gagner à se familiariser avec la programmation dans ce langage ;  </p>\n"
    ]
   },
   {
@@ -96,9 +100,9 @@
     "## Notre cas d'exemple : un sondage de confiance  \n",
     "\n",
     "Dans ce tutoriel, nous appliquerons notre algorithme d'ACP aux résultats d'un sondage réalisé dans le cadre de l'épidémie de Covid-19.   \n",
-    "Un questionnaire de 12 questions a été soumis à 2014 individus. Pour chacun des 12 items (Justice, Média, Police, Assemblée Nationale, Science, Administration, Grandes entreprises, Associations, Gouvernement, Agences gouvernementales liées à la santé et à l'environnement, Médecins,  Sénat), les sondés ont répondu à la question \"Avez-vous confiance ou pas confiance dans… ?\" par un entier naturel entre 0 (pas du tout confiance) et 5 (tout à fait confiance).   \n",
-    "En \"langage statistique\", les données obtenues correspondent à un échantillon de 2014 réalisations de 12 variables aléatoires discrètes rassemblées dans un tableau rectangulaire de dimension 2014x12.   \n",
-    "Nous nommerons ce tableau df (pour dataframe), et nous l'assimilerons à une matrice 2014x12, avec $ x_i^j$ la valeur prise par la variable n°j pour le i-ième individu ($\\forall i\\in\\{0,...,2013\\}, \\forall j\\in\\{0,...,11\\}$)"
+    "Un questionnaire de 12 questions a été soumis à 1014 individus. Pour chacun des 12 items (Justice, Média, Police, Assemblée Nationale, Science, Administration, Grandes entreprises, Associations, Gouvernement, Agences gouvernementales liées à la santé et à l'environnement, Médecins,  Sénat), les sondés ont répondu à la question \"Avez-vous confiance ou pas confiance dans… ?\" par un entier naturel entre 1 (pas du tout confiance) et 5 (tout à fait confiance).   \n",
+    "En \"langage statistique\", les données obtenues correspondent à un échantillon de 1014 réalisations de 12 variables aléatoires discrètes, le tout rassemblé dans un tableau rectangulaire de dimension 2014x12.   \n",
+    "Nous nommerons ce tableau df (pour dataframe), et nous l'assimilerons à une matrice 1014x12, avec $ x_i^j$ la valeur prise par la variable n°j pour le i-ième individu ($\\forall i\\in\\{0,...,1013\\}, \\forall j\\in\\{0,...,11\\}$)"
    ]
   },
   {
@@ -137,7 +141,7 @@
    "metadata": {},
    "source": [
     "   \n",
-    "Importons nos données en format en pandas. Nous utiliserons la méthode .head() pour afficher les 5 premières lignes de données."
+    "Importons nos données en format en pandas :"
    ]
   },
   {
@@ -924,7 +928,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**En trois séries étapes, nous allons maintenant réaliser l'ACP tant attendue.**   \n",
+    "**En trois séries d'étapes, nous allons maintenant réaliser l'ACP tant attendue.**   \n",
     "**#1**\n",
     "Il nous faudra tout d'abord réaliser quelques transformations préliminaires :\n",
     "- attribuer un poids à chaque individu \n",
@@ -937,7 +941,7 @@
     "Ces étapes constituent une *standardisation* des données (le mot anglais *standardization* est cependant plus couramment employé) et font partie d'un prétraitement (ou preprocessing), au même titre que le nettoyage des données, leur agrégation ou leur réajustement potentiels en cas de biais ou de redondance. \n",
     "Par ces opérations, la qualité des données initiales peut être renforcée.\n",
     "\n",
-    "Centrer et réduire les données (les \"standardiser\") est une étape très fréquente (voire quasi-systématique) en statistiques. Elle est bien souvent essentielle aussi bien pour le traitement de données en sciences sociales que dans le cadre des *data sciences*. Certaines bibliothèques disposent par conséquent d'une fonction qui automatise ce prétraitement. \n",
+    "Centrer et réduire les données (les \"standardiser\") est une étape très fréquente (voire quasi-systématique) en statistique. Elle est souvent essentielle aussi bien pour le traitement de données en sciences sociales que dans le cadre des *data sciences*. Certaines bibliothèques disposent par conséquent d'une fonction qui automatise ce prétraitement. \n",
     "Le package *preprocessing* de *sklearn* propose ainsi une fonction *StandardScaler* qui permet, en une commande, de centrer et réduire les données.\n",
     "\n",
     "Pourquoi ne pas avoir l'utilisée ?\n",
@@ -958,9 +962,9 @@
     "**#3** \n",
     "Enfin, la troisième série d'étapes nous permettra de visualiser nos résultats.   \n",
     "Nous afficherons :\n",
-    "- le nuage de point résultant de l'ACP\n",
     "- le cercle de corrélation \n",
-    "- les cos2\n",
+    "- une heat map des $cos^2$\n",
+    "- le graphique des individus résultant de l'ACP\n",
     "\n",
     "À l'issue de ces derniers affichages, nous aurons rempli le cahier des charges fixé en introduction : nous aurons à notre disposition un outil pratique d'analyse des données et nous aurons pu démontrer les potentialités offertes par Python, en présentant au lecteur-chercheur un nuage de point interactif, indisponible sur R."
    ]
@@ -992,16 +996,16 @@
    "metadata": {},
    "source": [
     "  \n",
-    "Pour ces données, on accorde la même importance à tous les individus. Tous nos individus \"comptent pour un\".  \n",
+    "Dans le cadre de notre exemple, on accorde la même importance à tous les individus. Tous les sondés \"comptent pour un\".  \n",
     "Le poids $p_{i}$ associé à chaque individu $i\\in\\{1,...,n\\}$ est inversement proportionnel à la taille de l'échantillon tel que $p_{i} = 1/n, \\forall i\\in\\{1,...,n\\}$\n",
     "\n",
     "  \n",
-    "Ainsi, dans le cas usuel, la matrice D des poids est donnée par :"
+    "Ainsi, dans un cas usuel comme le notre, la matrice D des poids est donnée par :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1019,7 @@
        "        0.        ]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1029,7 +1033,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous obtenons une matrice diagonale de taille n et de coefficients 1/1014."
+    "Nous obtenons une matrice diagonale de taille n=1014 et de coefficients 1/1014."
    ]
   },
   {
@@ -1172,7 +1176,7 @@
    "metadata": {},
    "source": [
     "Si les 12 variables aléatoires considérées suivaient un loi discrète uniforme, pour un nombre suffisant de sondés, $g$ serait très proche du vecteur ligne de coefficients tous égaux à (1+2+3+4+5)/5 = 3.\n",
-    "Or la valeur de $g$ est significativement inférieure à 3 pour les colonnes \"Science\" et \"Médecins\" par exemple. Cela semble indiquer une plus grande défiance envers ces institutions ou ces corps de métiers.\n"
+    "Or la valeur de $g$ est significativement inférieure à 3 pour les variables $Science$ et $Médecins$ par exemple. Cela semble indiquer une plus grande défiance envers ces institutions ou ces corps de métiers.\n"
    ]
   },
   {
@@ -1483,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1583,7 @@
        "Sénat          -5.679437e-15"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5316,7 +5320,7 @@
    "metadata": {},
    "source": [
     "La communauté Python s'agrandit de jours en jours et les usages de ce langage sont loin de se limiter à la science des données. \n",
-    "Qui sait, peut-être tomberez-vous bientôt sur un ouvrage de python pour les sciences sociales qui vous mettra définitivement la main à la patte.  \n",
+    "Qui sait, peut-être tomberez-vous bientôt sur un ouvrage de python pour les sciences humaines et sociales qui vous mettra définitivement la main à la patte.  \n",
     "En attendant, merci de votre lecture :)"
    ]
   }
