--- a/L'ACP en python - version GitHub.ipynb
+++ b/L'ACP en python - version GitHub.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "Avant de commencer la lecture de ce document, merci d'appuyer sur <font color='red'>  Kernel > Restart & Run All </font>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# L'Analyse des correspondances principales \n"
    ]
   },
